# gn-perf

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  genperf.pl  perfplot.gpi
cmake/: FindNVML.cmake
include/: gn_glfw.hpp  gn_perf_config.hpp.in  hash.hpp  stat_acc.hpp
shaders/: shader-gn.glsl
src/: gn_glfw.cpp  main.cpp
t/: .gitignore  gentests.pl  test.tt
